spec/.test/config/valid/only/tags.php
<?php

return [
    'tags' => [
        'id1' => ['tag311','tag312'],
        'id2' => ['tag321','tag322'],
    ],
];
