spec/.test/config/invalid/isect/tags/parameters.php
<?php

return [
    'parameters' => [
        'id' => 'parameter',
    ],
    'tags' => [
        'id' => [
            'id1' => [],
        ],
    ],
];
